fixed overflow

--- a/css/class11.css
+++ b/css/class11.css
@@ -16,7 +16,6 @@ body {
 
 nav {
     display: flex;
-    width: 100%;
     justify-content: space-between;
     padding: 0 24px;
 }
